# coinflip

./: .gitignore  Cargo.toml  notes.txt
src/: bookkeeper.rs  common.rs  main.rs  metadata.rs  normalization.rs  portfolio.rs  session.rs  traits.rs  ws.rs
src/data_structures/: cache.rs  indexed_matrix.rs  indexed_store.rs  mod.rs
src/gemini/: client.rs  messages.rs  mod.rs  orderbook.rs  parser.rs  poll.rs  responses.rs  router.rs  types.rs
src/ontology/: client.rs  mod.rs
src/stats/: embedding.rs  engine.rs  entities.rs  matcher.rs  mod.rs  observation.rs  stratify.rs
src/stats/ml/: mod.rs
src/utils/: mod.rs  normalization.rs  parsing.rs
