[package]
name = "coinflip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "*"

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"

reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "*"

chrono = { version = "0.4", features = ["now", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3"
sonic-rs = "0.3"
memchr = "=2.6.3"

rust_decimal = "1"
rust_decimal_macros = "1"

bincode = "1"
kanal = "0.1.1"

dashmap = "6.1.0"
async-trait = "0.1.89"

tracing = "0.1"
tracing-subscriber = "0.3"
