[package]
name = "coinflip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"
kanal = "0.1.1"

reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "*"

chrono = { version = "0.4", features = ["now", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3"
sonic-rs = "0.3"
memchr = "=2.6.3"

rust_decimal = "1"
rust_decimal_macros = "1"

slotmap = "1"
dashmap = "6.1.0"
async-trait = "0.1.89"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

ndarray = "0.16"
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["ndarray", "std", "download-binaries"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
